JamScriptParser.py
# Generated from JamScript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JamScriptParser ( Parser ):

    grammarFileName = "JamScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'int'", "'float'", "'bool'", 
                     "'string'", "'+'", "'-'", "'*'", "'/'", "'='", "'=='", 
                     "'!='", "'>'", "'<'", "'&&'", "'||'", "'!'", "'++'", 
                     "'--'", "'('", "')'", "'{'", "'}'", "';'", "':'", "','", 
                     "'.'", "'program'", "'function'", "'let'", "'const'", 
                     "'struct'", "'main'", "'if'", "'else'", "'while'", 
                     "'for'", "'return'", "'print'", "'input'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "PLUS", "MINUS", "STAR", 
                      "SLASH", "EQ", "EQEQ", "NEQ", "GT", "LT", "AND", "OR", 
                      "NOT", "INC", "DEC", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "SEMI", "COLON", "COMMA", "DOT", "PROGRAM", 
                      "FUNCTION", "LET", "CONST", "STRUCT", "MAIN", "IF", 
                      "ELSE", "WHILE", "FOR", "RETURN", "PRINT", "INPUT", 
                      "WS", "LINE_COMMENT", "BLOCK_COMMENT", "BOOL", "ID", 
                      "FLOAT", "NUMBER", "STRING" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_structDecl = 2
    RULE_structField = 3
    RULE_varDecl = 4
    RULE_funcDecl = 5
    RULE_paramList = 6
    RULE_param = 7
    RULE_mainBlock = 8
    RULE_block = 9
    RULE_stmt = 10
    RULE_simpleStmt = 11
    RULE_assignStmt = 12
    RULE_leftHandSide = 13
    RULE_callStmt = 14
    RULE_printStmt = 15
    RULE_inputStmt = 16
    RULE_idList = 17
    RULE_ifStmt = 18
    RULE_whileStmt = 19
    RULE_forStmt = 20
    RULE_forInit = 21
    RULE_forUpdate = 22
    RULE_assignNoSemi = 23
    RULE_incExpr = 24
    RULE_returnStmt = 25
    RULE_expr = 26
    RULE_orExpr = 27
    RULE_andExpr = 28
    RULE_eqExpr = 29
    RULE_relExpr = 30
    RULE_addExpr = 31
    RULE_mulExpr = 32
    RULE_unaryExpr = 33
    RULE_postfixExpr = 34
    RULE_primary = 35
    RULE_functionCall = 36
    RULE_argList = 37
    RULE_type_ = 38

    ruleNames =  [ "program", "decl", "structDecl", "structField", "varDecl", 
                   "funcDecl", "paramList", "param", "mainBlock", "block", 
                   "stmt", "simpleStmt", "assignStmt", "leftHandSide", "callStmt", 
                   "printStmt", "inputStmt", "idList", "ifStmt", "whileStmt", 
                   "forStmt", "forInit", "forUpdate", "assignNoSemi", "incExpr", 
                   "returnStmt", "expr", "orExpr", "andExpr", "eqExpr", 
                   "relExpr", "addExpr", "mulExpr", "unaryExpr", "postfixExpr", 
                   "primary", "functionCall", "argList", "type_" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    PLUS=6
    MINUS=7
    STAR=8
    SLASH=9
    EQ=10
    EQEQ=11
    NEQ=12
    GT=13
    LT=14
    AND=15
    OR=16
    NOT=17
    INC=18
    DEC=19
    LPAREN=20
    RPAREN=21
    LBRACE=22
    RBRACE=23
    SEMI=24
    COLON=25
    COMMA=26
    DOT=27
    PROGRAM=28
    FUNCTION=29
    LET=30
    CONST=31
    STRUCT=32
    MAIN=33
    IF=34
    ELSE=35
    WHILE=36
    FOR=37
    RETURN=38
    PRINT=39
    INPUT=40
    WS=41
    LINE_COMMENT=42
    BLOCK_COMMENT=43
    BOOL=44
    ID=45
    FLOAT=46
    NUMBER=47
    STRING=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(JamScriptParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(JamScriptParser.ID, 0)

        def SEMI(self):
            return self.getToken(JamScriptParser.SEMI, 0)

        def mainBlock(self):
            return self.getTypedRuleContext(JamScriptParser.MainBlockContext,0)


        def EOF(self):
            return self.getToken(JamScriptParser.EOF, 0)

        def structDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JamScriptParser.StructDeclContext)
            else:
                return self.getTypedRuleContext(JamScriptParser.StructDeclContext,i)


        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JamScriptParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(JamScriptParser.FuncDeclContext,i)


        def getRuleIndex(self):
            return JamScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = JamScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(JamScriptParser.PROGRAM)
            self.state = 79
            self.match(JamScriptParser.ID)
            self.state = 80
            self.match(JamScriptParser.SEMI)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 81
                self.structDecl()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 87
                self.funcDecl()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.mainBlock()
            self.state = 94
            self.match(JamScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(JamScriptParser.VarDeclContext,0)


        def getRuleIndex(self):
            return JamScriptParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = JamScriptParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.varDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(JamScriptParser.STRUCT, 0)

        def ID(self):
            return self.getToken(JamScriptParser.ID, 0)

        def LBRACE(self):
            return self.getToken(JamScriptParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(JamScriptParser.RBRACE, 0)

        def structField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JamScriptParser.StructFieldContext)
            else:
                return self.getTypedRuleContext(JamScriptParser.StructFieldContext,i)


        def getRuleIndex(self):
            return JamScriptParser.RULE_structDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDecl" ):
                listener.enterStructDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDecl" ):
                listener.exitStructDecl(self)




    def structDecl(self):

        localctx = JamScriptParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(JamScriptParser.STRUCT)
            self.state = 99
            self.match(JamScriptParser.ID)
            self.state = 100
            self.match(JamScriptParser.LBRACE)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 101
                self.structField()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(JamScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructFieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JamScriptParser.ID, 0)

        def COLON(self):
            return self.getToken(JamScriptParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(JamScriptParser.Type_Context,0)


        def SEMI(self):
            return self.getToken(JamScriptParser.SEMI, 0)

        def LET(self):
            return self.getToken(JamScriptParser.LET, 0)

        def getRuleIndex(self):
            return JamScriptParser.RULE_structField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructField" ):
                listener.enterStructField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructField" ):
                listener.exitStructField(self)




    def structField(self):

        localctx = JamScriptParser.StructFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(JamScriptParser.LET)
            self.state = 110
            self.match(JamScriptParser.ID)
            self.state = 111
            self.match(JamScriptParser.COLON)
            self.state = 112
            self.type_()
            self.state = 113
            self.match(JamScriptParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(JamScriptParser.LET, 0)

        def ID(self):
            return self.getToken(JamScriptParser.ID, 0)

        def COLON(self):
            return self.getToken(JamScriptParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(JamScriptParser.Type_Context,0)


        def SEMI(self):
            return self.getToken(JamScriptParser.SEMI, 0)

        def EQ(self):
            return self.getToken(JamScriptParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(JamScriptParser.ExprContext,0)


        def CONST(self):
            return self.getToken(JamScriptParser.CONST, 0)

        def getRuleIndex(self):
            return JamScriptParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)




    def varDecl(self):

        localctx = JamScriptParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(JamScriptParser.LET)
                self.state = 116
                self.match(JamScriptParser.ID)
                self.state = 117
                self.match(JamScriptParser.COLON)
                self.state = 118
                self.type_()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 119
                    self.match(JamScriptParser.EQ)
                    self.state = 120
                    self.expr()


                self.state = 123
                self.match(JamScriptParser.SEMI)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(JamScriptParser.CONST)
                self.state = 126
                self.match(JamScriptParser.ID)
                self.state = 127
                self.match(JamScriptParser.COLON)
                self.state = 128
                self.type_()
                self.state = 129
                self.match(JamScriptParser.EQ)
                self.state = 130
                self.expr()
                self.state = 131
                self.match(JamScriptParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(JamScriptParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(JamScriptParser.ID, 0)

        def LPAREN(self):
            return self.getToken(JamScriptParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JamScriptParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(JamScriptParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(JamScriptParser.Type_Context,0)


        def block(self):
            return self.getTypedRuleContext(JamScriptParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(JamScriptParser.ParamListContext,0)


        def getRuleIndex(self):
            return JamScriptParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)




    def funcDecl(self):

        localctx = JamScriptParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(JamScriptParser.FUNCTION)
            self.state = 136
            self.match(JamScriptParser.ID)
            self.state = 137
            self.match(JamScriptParser.LPAREN)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 138
                self.paramList()


            self.state = 141
            self.match(JamScriptParser.RPAREN)
            self.state = 142
            self.match(JamScriptParser.COLON)
            self.state = 143
            self.type_()
            self.state = 144
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JamScriptParser.ParamContext)
            else:
                return self.getTypedRuleContext(JamScriptParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JamScriptParser.COMMA)
            else:
                return self.getToken(JamScriptParser.COMMA, i)

        def getRuleIndex(self):
            return JamScriptParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = JamScriptParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.param()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 147
                self.match(JamScriptParser.COMMA)
                self.state = 148
                self.param()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JamScriptParser.ID, 0)

        def COLON(self):
            return self.getToken(JamScriptParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(JamScriptParser.Type_Context,0)


        def getRuleIndex(self):
            return JamScriptParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = JamScriptParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(JamScriptParser.ID)
            self.state = 155
            self.match(JamScriptParser.COLON)
            self.state = 156
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(JamScriptParser.MAIN, 0)

        def block(self):
            return self.getTypedRuleContext(JamScriptParser.BlockContext,0)


        def getRuleIndex(self):
            return JamScriptParser.RULE_mainBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainBlock" ):
                listener.enterMainBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainBlock" ):
                listener.exitMainBlock(self)




    def mainBlock(self):

        localctx = JamScriptParser.MainBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mainBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(JamScriptParser.MAIN)
            self.state = 159
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(JamScriptParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(JamScriptParser.RBRACE, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JamScriptParser.DeclContext)
            else:
                return self.getTypedRuleContext(JamScriptParser.DeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JamScriptParser.StmtContext)
            else:
                return self.getTypedRuleContext(JamScriptParser.StmtContext,i)


        def getRuleIndex(self):
            return JamScriptParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = JamScriptParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(JamScriptParser.LBRACE)
            self.state = 165
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 162
                    self.decl() 
                self.state = 167
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 37335081156610) != 0):
                self.state = 168
                self.stmt()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self.match(JamScriptParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleStmt(self):
            return self.getTypedRuleContext(JamScriptParser.SimpleStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(JamScriptParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(JamScriptParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(JamScriptParser.ForStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(JamScriptParser.BlockContext,0)


        def getRuleIndex(self):
            return JamScriptParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = JamScriptParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 30, 31, 38, 39, 40, 45]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.simpleStmt()
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.ifStmt()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 3)
                self.state = 178
                self.whileStmt()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 4)
                self.state = 179
                self.forStmt()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 5)
                self.state = 180
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStmt(self):
            return self.getTypedRuleContext(JamScriptParser.AssignStmtContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(JamScriptParser.CallStmtContext,0)


        def SEMI(self):
            return self.getToken(JamScriptParser.SEMI, 0)

        def returnStmt(self):
            return self.getTypedRuleContext(JamScriptParser.ReturnStmtContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(JamScriptParser.VarDeclContext,0)


        def getRuleIndex(self):
            return JamScriptParser.RULE_simpleStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleStmt" ):
                listener.enterSimpleStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleStmt" ):
                listener.exitSimpleStmt(self)




    def simpleStmt(self):

        localctx = JamScriptParser.SimpleStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_simpleStmt)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.assignStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.callStmt()
                self.state = 185
                self.match(JamScriptParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 187
                self.returnStmt()
                self.state = 188
                self.match(JamScriptParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 190
                self.varDecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 191
                self.match(JamScriptParser.T__0)
                self.state = 192
                self.match(JamScriptParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def leftHandSide(self):
            return self.getTypedRuleContext(JamScriptParser.LeftHandSideContext,0)


        def EQ(self):
            return self.getToken(JamScriptParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(JamScriptParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(JamScriptParser.SEMI, 0)

        def getRuleIndex(self):
            return JamScriptParser.RULE_assignStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)




    def assignStmt(self):
